[package]
name = "jango"
version = "0.1.0"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["command-line-utilities", "templates"]
keywords = ["cli", "app", "templates"]
# license = "Unlicense"
readme = true
# repository = "https://gitlab.com/DavoReds/templater"
description = ""

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
markdown = { version = "1.0.0-alpha.16", features = ["serde"] }
serde = "1.0.197"
tera = { version = "1.19.1", features = ["date-locale"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
walkdir = "2.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
