[package]
name = "jango"
version = "0.1.6"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["command-line-utilities", "templates"]
keywords = ["cli", "app", "templates"]
license = "Unlicense"
readme = true
repository = "https://github.com/DavoReds/jango"
description = "A CLI program to populate your templates"
rust-version = "1.74.1"

[package.metadata.wix]
upgrade-guid = "DC5FD31C-276A-4140-9EAC-806DF8E9E8F3"
path-guid = "4CF8B343-ED3D-48F1-89D6-23EBDAD2F44D"
license = false
eula = false

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
markdown = { version = "1.0.0-alpha.16", features = ["serde"] }
serde = "1.0.198"
tera = { version = "1.19.1", features = ["date-locale"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }

[dev-dependencies]
proptest = "1.4.0"
rstest = { version = "0.19.0", default-features = false }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
